--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,8 @@ footer ul li{
 .text-central{
     display: flex;
     width: 100%;
-    height: 200px;
+    height: 100px;
+    font-size: 2rem;
     align-items: center;
     justify-content: center;
 }
@@ -443,12 +444,13 @@ footer ul li{
 }
 
 .product{
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     text-align: center;
     border: 1px solid #CCC;
-    margin: 1rem;
     background-color: #fff;
+    box-shadow: 0px 0px 5px rgb(0 0 0 / 21%);
 }
 
 .product img{
@@ -464,12 +466,32 @@ footer ul li{
     border-color: rgb(255, 77, 77);
 }
 
-/* Marcas */
-
-.marca{
-    box-shadow: 1px 1px 2px grey;
-    transition: 0.5s;
+.cajasOferta {
+    border: 0 solid #ddd;
+    padding: 0.75rem;
 }
+
+.prod-nombre h4{
+    font-size: 1rem;
+    
+}
+
+.cant-add{
+    display: flex;
+    justify-content: center;
+}
+
+.cantidades{
+    width: 30%;
+    text-align: center;
+}
+
+.prod-precio{
+    font-size: 1.25rem;
+    font-weight:700;
+}
+
+/* Marcas */
 
 .marca:hover{
     box-shadow: 0px 0px 10px rgb(255, 77, 77);
