--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ color: white;
     font-size: 1.2rem;
 }
 
-#cantidad_carrito.badge {
+#cant_carrito.badge {
     position: relative;
     left: -16px;
     top: 7px;
@@ -195,7 +195,7 @@ header label:hover{
     width: 100%;
     height: 150px; overflow: hidden;
     stroke: none;
-    fill: rgb(255, 255, 255);
+    fill: #f6f6f6;
 }
 
 /* Main */
